--- a/package.json
+++ b/package.json
@@ -4,33 +4,43 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"tsc --watch\"  \"nodemon dist/index.js\"",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "dev": "cross-env NODE_ENV=development concurrently \"tsc --watch\"  \"nodemon dist/index.js\"",
+    "test": "cross-env NODE_ENV=test jest --verbose"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/morgan": "^1.9.9",
     "@types/pg": "^8.10.9",
     "@types/sequelize": "^4.28.19",
+    "@types/supertest": "^2.0.16",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.2",
     "standard": "^17.1.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
   },
-  "eslintConfig" : {
+  "eslintConfig": {
     "extends": "./node_modules/standard.eslintrc.json"
   }
 }
