modificar envio de data en login

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
 PORT=
+DATABASE=
+DATABASE_TEST=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+DATABASE_HOST=
+DATABASE_DIALECT=
+DATABASE_PORT=
+JWT_SECRET=
+REFRESH_JWT_SECRET=
