--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ DATABASE_PORT=
 JWT_SECRET=
 REFRESH_JWT_SECRET=
 API_KEY_RESEND=
+NODEMAILER_HOST=
+NODEMAILER_PORT=
+NODEMAILER_USER=
+NODEMAILER_PASS=
