--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.8",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "resend": "^2.1.0",
@@ -38,6 +39,7 @@
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
+    "@types/nodemailer": "^6.4.14",
     "@types/pg": "^8.10.9",
     "@types/sequelize": "^4.28.19",
     "@types/supertest": "^2.0.16",
